убрал проверку входных данных в одной из операций. добавил аргумент '--enable-preview' для запуска через gradle. readme.